--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
-description: Uniswap is a decentralized protocol for automated token exchange on Ethereum.
-repository: https://github.com/Uniswap/uniswap-v2-subgraph
+description: WanSwap is a decentralized protocol for automated token exchange on Wanchain.
+repository: https://github.com/wanswap/wanswap-subgraph
 schema:
   file: ./schema.graphql
 dataSources:
