--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "graph build",
     "create-local": "graph create wanswap/wanswap-subgraph --node http://127.0.0.1:8020",
     "deploy-local": "graph deploy wanswap/wanswap-subgraph --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "remove": "graph remove wanswap/wanswap-subgraph --node http://127.0.0.1:8020",
     "deploy": "graph deploy ianlapham/uniswapv2 --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
     "watch-local": "graph deploy wanswap/wanswap-subgraph --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
